# play-it-loud

./: .gitignore  CMakeLists.txt  README.md  rom.gb
gb_serial/: CMakeLists.txt  downsampler.c  downsampler.h  encoder.c  encoder.h  gb_audio.c  gb_audio.h  gb_gfx.c  gb_gfx.h  gb_serial.c  gb_serial.h  gfx.c  spi.pio
jpegdec/: CMakeLists.txt  JPEGDEC.cpp  JPEGDEC.h  LICENSE  jpeg.inl  jpegdec_c_wrapper.cpp  jpegdec_c_wrapper.h
player_bt/: CMakeLists.txt  a2dp.c  a2dp.h  avrcp.c  avrcp.h  bt.c  bt.h  btstack_audio_pico_gblink.c  btstack_config.h  cover.2bpp  cover.h  main.c  sdp.c
player_sine/: CMakeLists.txt  main.c
player_static/: CMakeLists.txt  cover.2bpp  cover.h  main.c
player_usb/: CMakeLists.txt  cover.2bpp  cover.h  main.c  tusb_config.h  usb_audio.c  usb_audio.h  usb_descriptors.c  usb_descriptors.h
player_usb/1.5.0/: tusb_config.h  usb_audio.c  usb_descriptors.c  usb_descriptors.h
player_wifi/: CMakeLists.txt  lwipopts.h  main.c
rom/: CMakeLists.txt  audio.inc  audio_hq.inc  cover.2bpp  ibmpc1.inc  joypad.inc  logo.2bpp  main.asm  serial.inc  serial_hq.inc  timer.inc  variables.inc
rom_new/: CMakeLists.txt  macros.inc  main.asm  serial.inc  timer.inc
rom_new2/: CMakeLists.txt  main.asm  serial.inc
tools/: decode.c  decode_csv.c  encode.c  encode_from_raw_pcm.c  encode_hq.c  resample.py
wifi_python_poc/: async_registration.py  main.py  requirements.txt
